[gd_scene load_steps=11 format=3 uid="uid://djbuy4xg064kh"]

[ext_resource type="Script" path="res://scripts/levels/level.gd" id="1_hg0ys"]
[ext_resource type="PackedScene" uid="uid://ddnkxck5qdfcv" path="res://scenes/agents/player.tscn" id="2_kvnnx"]
[ext_resource type="Texture2D" uid="uid://csgljlev1li35" path="res://assets/spriteSheets/Marketplace (2).png" id="2_ls6df"]
[ext_resource type="PackedScene" uid="uid://by276q5li4uq4" path="res://scenes/levels/objects/exit_area.tscn" id="3_odhgs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ac2qs"]
texture = ExtResource("2_ls6df")
texture_region_size = Vector2i(128, 128)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0

[sub_resource type="TileSet" id="TileSet_1ubg0"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_ac2qs")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mfscv"]
a = Vector2(-1000, -250)
b = Vector2(1900, -250)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8lqse"]
a = Vector2(-1000, -250)
b = Vector2(-1000, 1250)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tgn8w"]
a = Vector2(-1000, 1250)
b = Vector2(1900, 1250)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_67ylo"]
a = Vector2(1900, -250)
b = Vector2(1900, 1250)

[node name="Town" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hg0ys")

[node name="TilemapHolder" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="TilemapHolder"]
tile_set = SubResource("TileSet_1ubg0")
format = 2
layer_0/name = "Floor1"
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(-131080, 458752, 4, -65544, 458752, 5, -131079, 524288, 4, -65543, 524288, 5, -131078, 589824, 4, -65542, 589824, 5, -131077, 458752, 4, -65541, 458752, 5, -131076, 524288, 4, -65540, 524288, 5, -131075, 589824, 4, -65539, 589824, 5, -131074, 458752, 4, -65538, 458752, 5, -131073, 524288, 4, -65537, 524288, 5, -196608, 589824, 4, -131072, 589824, 5, -196607, 458752, 4, -131071, 458752, 5, -196606, 524288, 4, -131070, 524288, 5, -196605, 589824, 4, -131069, 589824, 5, -196604, 458752, 4, -131068, 458752, 5, -196603, 524288, 4, -131067, 524288, 5, -196602, 589824, 4, -131066, 589824, 5, -196601, 458752, 4, -131065, 458752, 5, -196600, 524288, 4, -131064, 524288, 5, -196599, 589824, 4, -131063, 589824, 5, -196598, 458752, 4, -131062, 458752, 5, -196597, 524288, 4, -131061, 524288, 5, -196596, 589824, 4, -131060, 589824, 5, -196595, 458752, 4, -131059, 458752, 5, -196594, 524288, 4, -131058, 524288, 5, -65523, 458752, 4, 13, 458752, 5, -65522, 524288, 4, 14, 524288, 5, -65526, 458752, 4, 10, 458752, 5, -65525, 524288, 4, 11, 524288, 5, -65524, 589824, 4, 12, 589824, 5, 65549, 458752, 4, 131085, 458752, 5, 65550, 524288, 4, 131086, 524288, 5, 196621, 458752, 4, 262157, 458752, 5, 196622, 524288, 4, 262158, 524288, 5, 327693, 458752, 4, 393229, 458752, 5, 327694, 524288, 4, 393230, 524288, 5, 458765, 458752, 4, 524301, 458752, 5, 458766, 524288, 4, 524302, 524288, 5, 589837, 458752, 4, 589838, 524288, 4, 589834, 458752, 4, 589835, 524288, 4, 589836, 589824, 4, 458762, 458752, 4, 524298, 458752, 5, 458763, 524288, 4, 524299, 524288, 5, 458764, 589824, 4, 524300, 589824, 5, 327690, 458752, 4, 393226, 458752, 5, 327691, 524288, 4, 393227, 524288, 5, 327692, 589824, 4, 393228, 589824, 5, 196618, 458752, 4, 262154, 458752, 5, 196619, 524288, 4, 262155, 524288, 5, 196620, 589824, 4, 262156, 589824, 5, 65546, 458752, 4, 131082, 458752, 5, 65547, 524288, 4, 131083, 524288, 5, 65548, 589824, 4, 131084, 589824, 5, -65529, 458752, 4, 7, 458752, 5, -65528, 524288, 4, 8, 524288, 5, -65527, 589824, 4, 9, 589824, 5, 65543, 458752, 4, 131079, 458752, 5, 65544, 524288, 4, 131080, 524288, 5, 65545, 589824, 4, 131081, 589824, 5, 196615, 458752, 4, 262151, 458752, 5, 196616, 524288, 4, 262152, 524288, 5, 196617, 589824, 4, 262153, 589824, 5, 327687, 458752, 4, 393223, 458752, 5, 327688, 524288, 4, 393224, 524288, 5, 327689, 589824, 4, 393225, 589824, 5, 458759, 458752, 4, 524295, 458752, 5, 458760, 524288, 4, 524296, 524288, 5, 458761, 589824, 4, 524297, 589824, 5, 589831, 458752, 4, 589832, 524288, 4, 589833, 589824, 4, 589828, 458752, 4, 589829, 524288, 4, 589830, 589824, 4, 458756, 458752, 4, 524292, 458752, 5, 458757, 524288, 4, 524293, 524288, 5, 458758, 589824, 4, 524294, 589824, 5, 327684, 458752, 4, 393220, 458752, 5, 327685, 524288, 4, 393221, 524288, 5, 327686, 589824, 4, 393222, 589824, 5, 196612, 458752, 4, 262148, 458752, 5, 196613, 524288, 4, 262149, 524288, 5, 196614, 589824, 4, 262150, 589824, 5, 65540, 458752, 4, 131076, 458752, 5, 65541, 524288, 4, 131077, 524288, 5, 65542, 589824, 4, 131078, 589824, 5, -65532, 458752, 4, 4, 458752, 5, -65531, 524288, 4, 5, 524288, 5, -65530, 589824, 4, 6, 589824, 5, -65535, 458752, 4, 1, 458752, 5, -65534, 524288, 4, 2, 524288, 5, -65533, 589824, 4, 3, 589824, 5, 65537, 458752, 4, 131073, 458752, 5, 65538, 524288, 4, 131074, 524288, 5, 65539, 589824, 4, 131075, 589824, 5, 196609, 458752, 4, 262145, 458752, 5, 196610, 524288, 4, 262146, 524288, 5, 196611, 589824, 4, 262147, 589824, 5, 327681, 458752, 4, 393217, 458752, 5, 327682, 524288, 4, 393218, 524288, 5, 327683, 589824, 4, 393219, 589824, 5, 458753, 458752, 4, 524289, 458752, 5, 458754, 524288, 4, 524290, 524288, 5, 458755, 589824, 4, 524291, 589824, 5, 589825, 458752, 4, 589826, 524288, 4, 589827, 589824, 4, 655358, 458752, 4, 655359, 524288, 4, 589824, 589824, 4, 524286, 458752, 4, 589822, 458752, 5, 524287, 524288, 4, 589823, 524288, 5, 458752, 589824, 4, 524288, 589824, 5, 393214, 458752, 4, 458750, 458752, 5, 393215, 524288, 4, 458751, 524288, 5, 327680, 589824, 4, 393216, 589824, 5, 262142, 458752, 4, 327678, 458752, 5, 262143, 524288, 4, 327679, 524288, 5, 196608, 589824, 4, 262144, 589824, 5, 131070, 458752, 4, 196606, 458752, 5, 131071, 524288, 4, 196607, 524288, 5, 65536, 589824, 4, 131072, 589824, 5, -2, 458752, 4, 65534, 458752, 5, -1, 524288, 4, 65535, 524288, 5, -65536, 589824, 4, 0, 589824, 5, -5, 458752, 4, 65531, 458752, 5, -4, 524288, 4, 65532, 524288, 5, -3, 589824, 4, 65533, 589824, 5, -8, 458752, 4, 65528, 458752, 5, -7, 524288, 4, 65529, 524288, 5, -6, 589824, 4, 65530, 589824, 5, 131064, 458752, 4, 196600, 458752, 5, 131065, 524288, 4, 196601, 524288, 5, 131066, 589824, 4, 196602, 589824, 5, 131067, 458752, 4, 196603, 458752, 5, 131068, 524288, 4, 196604, 524288, 5, 131069, 589824, 4, 196605, 589824, 5, 262139, 458752, 4, 327675, 458752, 5, 262140, 524288, 4, 327676, 524288, 5, 262141, 589824, 4, 327677, 589824, 5, 262136, 458752, 4, 327672, 458752, 5, 262137, 524288, 4, 327673, 524288, 5, 262138, 589824, 4, 327674, 589824, 5, 393208, 458752, 4, 458744, 458752, 5, 393209, 524288, 4, 458745, 524288, 5, 393210, 589824, 4, 458746, 589824, 5, 393211, 458752, 4, 458747, 458752, 5, 393212, 524288, 4, 458748, 524288, 5, 393213, 589824, 4, 458749, 589824, 5, 524283, 458752, 4, 589819, 458752, 5, 524284, 524288, 4, 589820, 524288, 5, 524285, 589824, 4, 589821, 589824, 5, 524280, 458752, 4, 589816, 458752, 5, 524281, 524288, 4, 589817, 524288, 5, 524282, 589824, 4, 589818, 589824, 5, 655352, 458752, 4, 655353, 524288, 4, 655354, 589824, 4, 655355, 458752, 4, 655356, 524288, 4, 655357, 589824, 4)
layer_1/name = "Floor2"
layer_1/z_index = -10
layer_1/tile_data = PackedInt32Array()

[node name="ExitArea" parent="." instance=ExtResource("3_odhgs")]
position = Vector2(-78, 590)
rotation = 0.608579

[node name="player" parent="." instance=ExtResource("2_kvnnx")]
y_sort_enabled = true
position = Vector2(76, 541)

[node name="RoomBoundary" type="Node" parent="."]

[node name="BoundaryShape" type="StaticBody2D" parent="RoomBoundary"]

[node name="Top" type="CollisionShape2D" parent="RoomBoundary/BoundaryShape"]
shape = SubResource("SegmentShape2D_mfscv")
debug_color = Color(0.803922, 0.823529, 0, 1)

[node name="Left" type="CollisionShape2D" parent="RoomBoundary/BoundaryShape"]
shape = SubResource("SegmentShape2D_8lqse")

[node name="Bottom" type="CollisionShape2D" parent="RoomBoundary/BoundaryShape"]
shape = SubResource("SegmentShape2D_tgn8w")

[node name="Right" type="CollisionShape2D" parent="RoomBoundary/BoundaryShape"]
shape = SubResource("SegmentShape2D_67ylo")
